SERVER-60152 Add the proper out slot for child eval stage